# playground

./: README.md  allroutes.xml  alphametics.py  asyncio01.py  basic_crud_application.html  benchmark.py  bind.py  blaster.py  bogus.py  build_python.md  buses.py  buttonpics-func.py  buttonpics.py  canvas1.py  checksum.py  client.py  cmds  cobroadcast.py  cobroadcast2.py  cocrash.py  coexpat.py  cofollow.py  config-button.py  config-label.py  config.py  copipe.py  coprocess.py  coroutine.py  cosax.py  cothread.py  create_a_database.sql  create_a_procedure.sql  create_a_table.sql  create_a_view.sql  curl01.php  curl02.php  curl04.php  curl05.php  curl06.php  curl07.php  (+168 more)
babel_demo/: index.js  package-lock.json  package.json
bash/: default_value.sh  for.sh  parameter.sh  string.sh
books/: Spark_CountVectorizer.md  Symfony_Response.md  books.md  kazuo_inamori.md  out_of_control.md
c/: background.c  base64.c  bin2hex.c  bit.c  buffer.c  buffer.h  called_with_link.c  circular_array.c  circular_que.c  circular_que.h  cjson.c  convert.c  echo_client.c  echo_server.c  eventfd.c  file_monitor.c  float.c  freetds.c  getaddrinfo.c  getpid.c  hclient.c  hprotocal.c  hprotocal.h  hserver.c  inet_aton.c  inet_ntoa.c  itoa.c  macro.c  minpath.c  phex2bin.c  pipe.c  pri_que.c  pri_que.h  protocal.c  pthread.c  sieve_of_eratosthenes.c  signal.c  sigprocmask.c  space_to_comma.c  stack.c  (+8 more)
c++/: NameHiding.cpp  SynthesizedFunctions.cpp  array.cpp  const.cpp  inheritance.cpp  macro.cpp  macro1.cpp  new.cpp  order.cpp  preprocessor.cpp  sizeof.cpp  static.cpp  string1.cpp  string2.cpp  stringizing.cpp  temporary.cpp  tokenpasting.cpp  virtual.cpp
c/2022/CMakeSln1/CMakePro1/: CMakeLists.txt  CMakePro1.c  CMakePro1.h
c/callrust/callrust/: CMakeLists.txt  callrust.c
centos/: 4.18-kernel  composer  firewall  firewall-cmd  git  iot  nginx  nodejs  php-fpm  remi-php72  selinux  selinux1  test-pdo_sqlsrv.php  vbox  wheel
cmake/app/: CMakeLists.txt
cmake/app/hzw/: CMakeLists.txt
cmake/app1/: CMakeLists.txt
cmake/src/: CMakeLists.txt  tutorial.cxx
cmake/src/MathFunctions/: mysqrt.cxx
cmake/step1/: CMakeLists.txt  Tutorial.cxx
css/: 2c.html  2c0.html  absolute_position.html  bs-component-alert.html  bs-component-badge.html  bs-layout-01.html  bs-layout-02.html  bs.html  clear.html  clear1.html  clear2.html  fixed_position.html  fixed_position_iframe_content.html  flexbox.html  float.html  inline.html  relative_position.html  sticky_position.html  sticky_position_iframe_content.html  tableless.html  tableless0.html  tableless1.css  tableless1.html
curl/: web_auth.sh
cxml/: cxmlparse.c
diary/: 20180121.md  20181211.md  20181212.md  20181219.md  20181227.md  20190114.md  20190314.md  20190315.md  20190322.md  20190325.md  20190328.md  20190329.md  20190422.md  20240808.md  20240809.md  20240811.md  20240812.md  20240822.md  20240823.md  20240825.md
docker/: Dockerfile  app.py  docker-compose.yml
docs/: Diffie-Hellman.md  align1.md  align2.md  align3.md  android_view.md  arm.md  armcc  asn1.md  audio.md  bask_navigation.md  beyond_compare.md  c.md  c1.md  c_bit.md  c_enum.md  c_macro.md  c_typedef.md  char.md  cipher.md  cl.md  connection_pool.md  ctl.md  curl.md  debug.md  diff.md  docker  docker_mysql  docs.md  english.md  esdgate.md  find.md  freetype.md  game.md  gdi_task.md  git.md  git1.md  git2.md  git_checkout.md  git_config.md  git_fetch.md  (+177 more)
express/: express1.js
go/: append.go  chan1.go  chan2.go  chan3.go  (+26 more)
rust/axum-test/: Cargo.toml
rust/axum-test/examples/: cors.rs  dependency.rs  error.rs  global404.rs  path_rejection.rs  testing.rs
rust/axum-test/examples/chat/: main.rs
rust/axum-test/examples/extractor/: custom_extractor.rs  derive_from_request.rs  main.rs  with_rejection.rs
rust/axum-test/examples/websockets/: main.rs
rust/huggingface/candle-roberta/: Cargo.toml
rust/huggingface/candle-roberta/examples/: ex1.rs  ex2.rs  ex4.rs
rust/huggingface/candle-roberta/src/: main.rs  utils.rs
rust/huggingface/candle-roberta/src/models/: mod.rs  modelling_outputs.rs  roberta.rs
rust/reqwest1/: Cargo.toml  run.bat
rust/reqwest1/src/: lib.rs  main.rs
rust/simple-macro/: Cargo.toml
rust/simple-macro/src/: lib.rs
rust/simple-macro/tests/: test.rs
rust/t1/: Cargo.toml  mylib.lib
rust/t1/examples/: add.rs  add2.rs  alloc.rs  asm.rs  async.rs  async2.rs  async3.rs  async4.rs  bit.rs  bitand.rs  box.rs  c1.rs  channel.rs  clap1.rs  closures.rs  count.rs  cursor.rs  default.rs  delay.rs  delay2.rs  deref.rs  deref1.rs  deref3.rs  destruct.rs  dive.rs  drop_1.rs  drop_2.rs  enum.rs  fmt.rs  fn.rs  fn_as.rs  from.rs  from1.rs  generics.rs  hash.rs  hasher.rs  io.rs  json_1.rs  json_2.rs  largest.rs  (+43 more)
rust/t1/examples/clap2/: hashmap.rs  main.rs
rust/t1/src/: io.rs  lib.rs  num2str.rs  nums_sum.rs
rust/t1/t1_derive/: Cargo.toml
rust/t1/t1_derive/src/: lib.rs
rust/workspace/design/m3u8_downloader/: Cargo.toml
rust/workspace/design/m3u8_downloader/deepseek/: Cargo.toml
rust/workspace/design/m3u8_downloader/deepseek/src/: main.rs
rust/workspace/design/m3u8_downloader/deepseek2/: Cargo.toml
rust/workspace/design/m3u8_downloader/deepseek2/src/: lib.rs  main.rs
rust/workspace/design/m3u8_downloader/deepseek2/tests/: integration_tests.rs
rust/workspace/design/m3u8_downloader/src/: lib.rs  main.rs
rust/workspace/design/m3u8_downloader/tests/: integration_tests.rs
rust/workspace/examples/axum-tests/: Cargo.toml
rust/workspace/examples/axum-tests/examples/: jwt.rs  minijinja.rs  static-file-server.rs
rust/workspace/examples/axum-tests/templates/: home.jinja  layout.jinja
rust/workspace/examples/hyper-tests/: Cargo.toml
rust/workspace/examples/hyper-tests/examples/: client-json.rs  client.rs  echo.rs  gateway.rs  hello.rs  http-proxy-client.rs  http-proxy.rs
rust/workspace/examples/ws/: Cargo.toml  README.md
rust/workspace/examples/ws/examples/: interval-server.rs  server-custom-accept.rs  server.rs
rust/workspace/tower-tests/middleware/: Cargo.toml
rust/workspace/tower-tests/middleware/examples/: rate.rs  retry.rs  timeout.rs
(+4446 files in other folders)
