[package]
name = "axum-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.4", features = ["ws", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.68"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
askama = "0.11"
tower-http = { version = "0.5.0", features = ["fs", "trace", "cors"] }
futures = "0.3"
axum-extra = { version = "0.9", features = ["typed-header"] }
headers = "0.4"
anyhow = "1.0"
http-body-util = "0.1.0"
thiserror = "1.0"
uuid = { version = "1.0", features = ["serde", "v4"] }
