workspace = { members = ["t1_derive"] }
[package]
name = "t1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
regex = "1.9.1"
serde = {version = "1.0.178", features = ["derive"]}
clap = { version = "4.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7", features = [ "runtime-tokio", "tls-rustls", "postgres" ] }
svg = "0.6"
chrono = "0.4"
futures = "0.3"
