[package]
name = "candle-roberta"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
candle-core = { git = "https://github.com/huggingface/candle.git", version = "0.4.0" }
candle-nn = { git = "https://github.com/huggingface/candle.git", version = "0.4.0" }
hf-hub = "0.3.2"
serde = "1.0.196"
serde_json = "1.0.113"
tokenizers = "0.15.1"
records = "0.2.0"
