[package]
name = "m3u8_downloader"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
futures = "0.3.32"
indicatif = "0.18.4"
regex = "1.12.3"
reqwest = { version = "0.13.2", features = ["json", "stream"] }
tempfile = "3.27.0"
tokio = { version = "1.50.0", features = ["full"] }
url = "2.5.8"

[dev-dependencies]
httpmock = "0.8.3"
