[package]
name = "axum-tests"
version = "0.1.0"
edition = "2024"

[dependencies]
askama = "0.15.6"
axum = { version = "0.8.8", features = ["ws"] }
futures = "0.3.32"
minijinja = "2.19.0"
serde = { version = "1.0.228", features = ["serde_derive"] }
tokio = { version = "1.51.0", features = ["full"] }
tower = "0.5.3"
tower-http = { version = "0.6.8", features = ["fs", "trace"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
