[package]
name = "axum-tests"
version = "0.1.0"
edition = "2024"

[dependencies]
askama = "0.15.6"
axum = { version = "0.8.8", features = ["ws"] }
axum-extra = { version = "0.12.5", features = ["typed-header"] }
futures = "0.3.32"
http-body-util = "0.1.3"
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
minijinja = "2.19.0"
once_cell = "1.21.4"
serde = { version = "1.0.228", features = ["serde_derive"] }
serde_json = "1.0.149"
tokio = { version = "1.51.0", features = ["full"] }
tower = "0.5.3"
tower-http = { version = "0.6.8", features = ["fs", "trace"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
