[package]
name = "hyper-tests"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes = "1.11.1"
http-body-util = "0.1.3"
hyper = { version = "1.8.1", features = ["client", "http1", "server"] }
hyper-util = { version = "0.1.20", features = ["tokio"] }
pretty_env_logger = "0.5.0"
tokio = { version = "1.50.0", features = ["io-std", "io-util", "macros", "net", "rt-multi-thread"] }
