[package]
name = "ws"
version = "0.1.0"
edition = "2024"

[dependencies]
env_logger = "0.11.10"
futures-channel = "0.3.32"
futures-util = "0.3.32"
http-body-util = "0.1.3"
hyper = { version = "1.8.1", features = ["http1", "server"] }
hyper-util = { version = "0.1.20", features = ["tokio"] }
log = "0.4.29"
tokio = { version = "1.50.0", features = ["io-std", "macros", "rt-multi-thread", "time"] }
tokio-tungstenite = { version = "0.29.0", features = ["native-tls"] }
