[package]
name = "middleware"
version = "0.1.0"
edition = "2024"

[dependencies]
futures-util = "0.3.32"
tokio = { version = "1.52.3", features = ["time", "rt", "macros", "rt-multi-thread"] }
tower = { version = "0.5.3", features = ["limit", "timeout", "util"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
