[package]
name = "m3u8_downloader"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
url = "2.5"
futures = "0.3"
indicatif = "0.17"
regex = "1.10"
tempfile = "3.10"

[dev-dependencies]
httpmock = "0.6"